@@ -1,8 +1,9 @@
 include ../packages.mk
 
-GMP_VERSION = $(shell expr download/gmp-*.tar.bz2 : 'download/gmp-\(.*\).tar.bz2')
-MPFR_VERSION = $(shell expr download/mpfr-*.tar.bz2 : 'download/mpfr-\(.*\).tar.bz2')
-MPC_VERSION = $(shell expr download/mpc-*.tar.gz : 'download/mpc-\(.*\).tar.gz')
+GMP_VERSION = 5.0.2
+MPFR_VERSION = 3.0.1
+MPC_VERSION = 0.9
+
 GMP_DIR = gmp-$(GMP_VERSION)
 MPFR_DIR = mpfr-$(MPFR_VERSION)
 MPC_DIR = mpc-$(MPC_VERSION)
@@ -15,16 +16,15 @@ endif
 all: gmp-install.tag gmp-clean mpfr-install.tag mpfr-clean mpc-install.tag mpc-clean
 
 .PHONY: clean
-clean: gmp-clean mpfr-clean
+clean: gmp-clean mpfr-clean mpc-clean
 	rm -rf download/* *.tag
 
 
-gmp-download.tag:
-	wget -P download ftp://ftp.gnu.org/gnu/gmp/gmp-5.0.1.tar.bz2
-	touch $@
+download/gmp-$(GMP_VERSION).tar.bz2:
+	wget -P download ftp://ftp.gnu.org/gnu/gmp/gmp-$(GMP_VERSION).tar.bz2
 
-gmp-unpack.tag: gmp-download.tag
-	tar xjf download/$(GMP_DIR).tar.bz2
+gmp-unpack.tag: download/gmp-$(GMP_VERSION).tar.bz2
+	tar xjf download/gmp-$(GMP_VERSION).tar.bz2
 	touch $@
 
 gmp-configure.tag: gmp-unpack.tag
@@ -40,13 +40,12 @@ gmp-install.tag: gmp-make.tag
 	make -C $(GMP_DIR) install
 	touch $@
 
-	
-mpfr-download.tag:
-	wget -P download http://www.mpfr.org/mpfr-current/mpfr-3.0.1.tar.bz2
-	touch $@
 
-mpfr-unpack.tag: mpfr-download.tag
-	tar xjf download/$(MPFR_DIR).tar.bz2
+download/mpfr-$(MPFR_VERSION).tar.bz2:
+	wget -P download http://www.mpfr.org/mpfr-current/mpfr-$(MPFR_VERSION).tar.bz2
+
+mpfr-unpack.tag: download/mpfr-$(MPFR_VERSION).tar.bz2
+	tar xjf download/mpfr-$(MPFR_VERSION).tar.bz2
 	touch $@
 
 mpfr-configure.tag: mpfr-unpack.tag
@@ -63,12 +62,11 @@ mpfr-install.tag: mpfr-make.tag
 	touch $@
 
 
-mpc-download.tag:
-	wget -P download http://www.multiprecision.org/mpc/download/mpc-0.8.2.tar.gz
-	touch $@
+download/mpc-$(MPC_VERSION).tar.gz:
+	wget -P download http://www.multiprecision.org/mpc/download/mpc-$(MPC_VERSION).tar.gz
 
-mpc-unpack.tag: mpc-download.tag
-	tar xzf download/$(MPC_DIR).tar.gz
+mpc-unpack.tag: download/mpc-$(MPC_VERSION).tar.gz
+	tar xzf download/mpc-$(MPC_VERSION).tar.gz
 	touch $@
 
 mpc-configure.tag: mpc-unpack.tag
